name:           parsers
version:        1.0.0
description:    Some description
author:         Dmitrii Kovanikov
maintainer:     fp.itmo.ctd@gmail.com
copyright:      2018 Dmitrii Kovanikov
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
  exposed-modules:  Parser
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite parsers-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test

  main-is:          Spec.hs
  other-modules:    Test.Property
                    Test.Unit

  build-depends:    base >=4.7 && <5
                  , parsers
                  , hedgehog
                  , tasty
                  , tasty-hedgehog
                  , tasty-hspec

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
