name:                insertion-sort-comparison
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            https://github.com/githubuser/insertion-sort-comparison#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Kovanikov
-- maintainer:          example@example.com
-- copyright:           2016 Author name here
category:            Sort
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArrayInsertionSort
                       ListInsertionSort
                       VecInsertionSort
  build-depends:       array
                     , base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  
benchmark is-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , insertion-sort-comparison
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

